--- a/system-design.html
+++ b/system-design.html
@@ -4,14 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>System Design Diagram Tool</title>
-    <style>
-        canvas {
-            border: 1px solid black;
-        }
-        #controls {
-            margin-bottom: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="System_style.css">
 </head>
 <body>
     <div id="controls">
