--- a/System_design_styles/system-design.html
+++ b/System_design_styles/system-design.html
@@ -138,13 +138,25 @@ function generateDiagram() {
 }
    
 function drawTwitterDiagram() {
-    // Define the boxes for the Twitter system
-    drawBox(50, 200, 120, 60, 'User Interface');
-    drawBox(200, 200, 120, 60, 'Load Balancer');
-    drawBox(350, 100, 120, 60, 'Web Servers');
-    drawBox(350, 300, 120, 60, 'Application Servers');
-    drawBox(550, 200, 120, 60, 'Cache (Redis)');
-    drawBox(700, 200, 120, 60, 'Database (MySQL)');
+    // Define the boxes for the Twitter system with better spacing
+    // Make boxes a bit wider for longer text
+    const boxWidth = 150;
+    const boxHeight = 70;
+    const horizontalSpacing = 200; // Increased spacing
+    const verticalSpacing = 100;
+
+    // Row 1: User Interface, Load Balancer
+    drawBox(50, canvas.height / 2 - boxHeight / 2, boxWidth, boxHeight, 'User Interface'); // Centered vertically
+    drawBox(50 + horizontalSpacing, canvas.height / 2 - boxHeight / 2, boxWidth, boxHeight, 'Load Balancer');
+
+    // Row 2: Web Servers (above), Application Servers (below)
+    drawBox(50 + 2 * horizontalSpacing, canvas.height / 2 - boxHeight / 2 - verticalSpacing, boxWidth, boxHeight, 'Web Servers');
+    drawBox(50 + 2 * horizontalSpacing, canvas.height / 2 - boxHeight / 2 + verticalSpacing, boxWidth, boxHeight, 'Application Servers');
+
+    // Row 3: Cache, Database
+    drawBox(50 + 3 * horizontalSpacing, canvas.height / 2 - boxHeight / 2, boxWidth, boxHeight, 'Cache (Redis)');
+    drawBox(50 + 4 * horizontalSpacing, canvas.height / 2 - boxHeight / 2, boxWidth, boxHeight, 'Database (MySQL)');
+
 
     // Define the connections
     connections = [
@@ -153,13 +165,13 @@ function drawTwitterDiagram() {
         {from: boxes[1], to: boxes[3]}, // Load Balancer -> Application Servers
         {from: boxes[2], to: boxes[4]}, // Web Servers -> Cache
         {from: boxes[3], to: boxes[4]}, // Application Servers -> Cache
-        {from: boxes[4], to: boxes[5]} // Cache -> Database
+        {from: boxes[4], to: boxes[5]}  // Cache -> Database
     ];
 
     redrawDiagram();
 
-    ctx.font = '16px Arial';
-    ctx.fillText('Twitter System Design', 300, 30);
+    ctx.font = '20px Arial'; // Slightly larger font for the title
+    ctx.fillText('Twitter System Design', canvas.width / 2 - ctx.measureText('Twitter System Design').width / 2, 30); // Center title
 }
 
 
