--- a/System_design_styles/system-design.html
+++ b/System_design_styles/system-design.html
@@ -66,21 +66,86 @@ function generateDiagram() {
 }
 
         function drawArrow(fromX, fromY, toX, toY) {
-    ctx.beginPath();
-    ctx.moveTo(fromX, fromY);
-    ctx.lineTo(toX, toY);
+    // Colors (should already be set by redrawDiagram, but good to ensure here)
     ctx.strokeStyle = '#BBDEFB'; // Lighter blue for the line
+    ctx.fillStyle = '#BBDEFB';   // Lighter blue for arrowheads
+
+    // Calculate intersection points with the target box
+    // Assuming 'from' and 'to' are the center points of the boxes
+    // We need to find the intersection point on the perimeter of the 'to' box
+    const fromBox = boxes.find(b =>
+        (b.x + b.width / 2 === fromX) && (b.y + b.height / 2 === fromY)
+    );
+    const toBox = boxes.find(b =>
+        (b.x + b.width / 2 === toX) && (b.y + b.height / 2 === toY)
+    );
+
+    let endX = toX;
+    let endY = toY;
+    let startX = fromX;
+    let startY = fromY;
+
+    // Adjust the start point to the edge of the 'fromBox'
+    if (fromBox) {
+        const angleFrom = Math.atan2(toY - fromY, toX - fromX);
+        const startIntersection = getBoxIntersection(fromBox, angleFrom);
+        if (startIntersection) {
+            startX = startIntersection.x;
+            startY = startIntersection.y;
+        }
+    }
+
+    // Adjust the end point to the edge of the 'toBox'
+    if (toBox) {
+        const angleTo = Math.atan2(fromY - toY, fromX - toX); // Angle from target back to source
+        const endIntersection = getBoxIntersection(toBox, angleTo);
+        if (endIntersection) {
+            endX = endIntersection.x;
+            endY = endIntersection.y;
+        }
+    }
+
+    // Draw the line
+    ctx.beginPath();
+    ctx.moveTo(startX, startY);
+    ctx.lineTo(endX, endY);
     ctx.stroke();
 
-    const angle = Math.atan2(toY - fromY, toX - fromX);
+    // Draw the arrowhead at endX, endY
+    const angle = Math.atan2(endY - startY, endX - startX);
     ctx.beginPath();
-    ctx.moveTo(toX, toY);
-    ctx.lineTo(toX - 15 * Math.cos(angle - Math.PI / 6), toY - 15 * Math.sin(angle - Math.PI / 6));
-    ctx.lineTo(toX - 15 * Math.cos(angle + Math.PI / 6), toY - 15 * Math.sin(angle + Math.PI / 6));
+    ctx.moveTo(endX, endY);
+    ctx.lineTo(endX - 15 * Math.cos(angle - Math.PI / 6), endY - 15 * Math.sin(angle - Math.PI / 6));
+    ctx.lineTo(endX - 15 * Math.cos(angle + Math.PI / 6), endY - 15 * Math.sin(angle + Math.PI / 6));
     ctx.closePath();
-    ctx.fillStyle = '#BBDEFB'; // Lighter blue for the arrowhead
     ctx.fill();
 }
+   
+   function getBoxIntersection(box, angle) {
+    const boxCenterX = box.x + box.width / 2;
+    const boxCenterY = box.y + box.height / 2;
+
+    const halfWidth = box.width / 2;
+    const halfHeight = box.height / 2;
+
+    const tanAngle = Math.abs(Math.tan(angle));
+
+    let intersectX, intersectY;
+
+    if (tanAngle * halfWidth <= halfHeight) { // Intersects left or right side
+        intersectX = Math.sign(Math.cos(angle)) * halfWidth;
+        intersectY = Math.tan(angle) * intersectX;
+    } else { // Intersects top or bottom side
+        intersectY = Math.sign(Math.sin(angle)) * halfHeight;
+        intersectX = intersectY / Math.tan(angle);
+    }
+
+    return {
+        x: boxCenterX + intersectX,
+        y: boxCenterY + intersectY
+    };
+}
+
 
         function drawWhatsAppDiagram() {
             drawBox(50, 50, 120, 60, 'User Interface');
@@ -98,6 +163,10 @@ function generateDiagram() {
 
             ctx.font = '16px Arial';
             ctx.fillText('WhatsApp System Design', 300, 30);
+
+            ctx.fillStyle = '#E0E0E0'; // Keep this for now, it's light.
+            ctx.font = 'bold 24px Arial'; // Add 'bold' to make it stand out
+            ctx.fillText('Twitter System Design', canvas.width / 2, 40);
         }
 
         function drawFacebookDiagram() {
@@ -118,6 +187,9 @@ function generateDiagram() {
 
             ctx.font = '16px Arial';
             ctx.fillText('Facebook System Design', 300, 30);
+            ctx.fillStyle = '#E0E0E0'; // Keep this for now, it's light.
+            ctx.font = 'bold 24px Arial'; // Add 'bold' to make it stand out
+            ctx.fillText('Twitter System Design', canvas.width / 2, 40);
         }
         
         function drawNetflixDiagram() {
@@ -142,27 +214,50 @@ function generateDiagram() {
 
     ctx.font = '16px Arial';
     ctx.fillText('Netflix System Design', 300, 30);
+    ctx.fillStyle = '#E0E0E0'; // Keep this for now, it's light.
+    ctx.font = 'bold 24px Arial'; // Add 'bold' to make it stand out
+    ctx.fillText('Twitter System Design', canvas.width / 2, 40);
 }
    
 function drawTwitterDiagram() {
     // Define the boxes for the Twitter system with better spacing
-    // Make boxes a bit wider for longer text
     const boxWidth = 150;
     const boxHeight = 70;
-    const horizontalSpacing = 200; // Increased spacing
+    const horizontalSpacing = 180; // Slightly adjusted spacing
     const verticalSpacing = 100;
 
+    // Calculate total diagram width to center it
+    // User Interface (1) + Load Balancer (1) + Web/App Servers (1) + Cache (1) + Database (1)
+    // There are 5 boxes horizontally.
+    // The total width of the boxes themselves is 6 * boxWidth if we count a virtual box for the middle.
+    // Let's count actual visible boxes: 6 boxes in total.
+    // The width occupied by boxes and their spacing will be roughly 5 * boxWidth + 4 * horizontalSpacing
+    const totalDiagramWidth = (6 * boxWidth) + (5 * horizontalSpacing); // Approximate total width
+
+    // Recalculate horizontal positions based on the new totalDiagramWidth
+    // Let's use 6 boxes with 5 gaps
+    const numBoxesInRow = 6;
+    const totalContentWidth = (numBoxesInRow * boxWidth) + ((numBoxesInRow - 1) * horizontalSpacing); // Total width of boxes and gaps in the main flow
+
+    const startX = (canvas.width - totalContentWidth) / 2 + 30; // Center the whole diagram horizontally
+
+    // Clear boxes and connections before drawing
+    boxes = [];
+    connections = [];
+
     // Row 1: User Interface, Load Balancer
-    drawBox(50, canvas.height / 2 - boxHeight / 2, boxWidth, boxHeight, 'User Interface'); // Centered vertically
-    drawBox(50 + horizontalSpacing, canvas.height / 2 - boxHeight / 2, boxWidth, boxHeight, 'Load Balancer');
+    drawBox(startX, canvas.height / 2 - boxHeight / 2, boxWidth, boxHeight, 'User Interface'); // Centered vertically
+    drawBox(startX + horizontalSpacing, canvas.height / 2 - boxHeight / 2, boxWidth, boxHeight, 'Load Balancer');
 
     // Row 2: Web Servers (above), Application Servers (below)
-    drawBox(50 + 2 * horizontalSpacing, canvas.height / 2 - boxHeight / 2 - verticalSpacing, boxWidth, boxHeight, 'Web Servers');
-    drawBox(50 + 2 * horizontalSpacing, canvas.height / 2 - boxHeight / 2 + verticalSpacing, boxWidth, boxHeight, 'Application Servers');
+    // These are positioned relative to Load Balancer and Cache
+    const middleX = startX + 2 * horizontalSpacing; // X-position for Web/App Servers
+    drawBox(middleX, canvas.height / 2 - boxHeight / 2 - verticalSpacing, boxWidth, boxHeight, 'Web Servers');
+    drawBox(middleX, canvas.height / 2 - boxHeight / 2 + verticalSpacing, boxWidth, boxHeight, 'Application Servers');
 
     // Row 3: Cache, Database
-    drawBox(50 + 3 * horizontalSpacing, canvas.height / 2 - boxHeight / 2, boxWidth, boxHeight, 'Cache (Redis)');
-    drawBox(50 + 4 * horizontalSpacing, canvas.height / 2 - boxHeight / 2, boxWidth, boxHeight, 'Database (MySQL)');
+    drawBox(startX + 3 * horizontalSpacing, canvas.height / 2 - boxHeight / 2, boxWidth, boxHeight, 'Cache (Redis)');
+    drawBox(startX + 4 * horizontalSpacing, canvas.height / 2 - boxHeight / 2, boxWidth, boxHeight, 'Database (MySQL)');
 
 
     // Define the connections
@@ -177,8 +272,9 @@ function drawTwitterDiagram() {
 
     redrawDiagram();
 
-    ctx.font = '20px Arial'; // Slightly larger font for the title
-    ctx.fillText('Twitter System Design', canvas.width / 2 - ctx.measureText('Twitter System Design').width / 2, 30); // Center title
+    ctx.fillStyle = '#E0E0E0'; // Ensure title text is visible and distinct
+    ctx.font = '24px Arial'; // Larger font for the title
+    ctx.fillText('Twitter System Design', canvas.width / 2, 40);
 }
 
 
